<resources>
    <string name="app_name" translatable="false">Shops\'N\'Prices</string>

    <string name="no_items">No items added</string>
    <string name="add">Add</string>
    <string name="added_success">Product added</string>
    <string name="deleted_success">Product deleted</string>
    <string name="del_alert_title">Delete</string>
    <string name="del_alert_message">Delete this product?</string>
    <string name="del_alert_positive">Yes</string>
    <string name="del_alert_negative">No</string>

    <string name="info_activity_title">Product Info</string>
    <string name="info_options_menu_title">Edit this product</string>
    <string name="info_table_shops_title">Available at</string>
    <string name="info_table_prices_title">At the price of</string>

    <string name="edit_activity_title">Edit Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_hint">Enter Name</string>
    <string name="product_info_title">Product Info</string>
    <string name="product_info_hint">Enter Info</string>
    <string name="product_shop_title">Product Shop</string>
    <string name="product_shop_hint">Enter Shop</string>
    <string name="product_price_title">Product Price</string>
    <string name="product_price_hint">0.00</string>
    <string name="save_button">Save</string>
    <string name="next">Next</string>
    <string name="error">An error occurred</string>
</resources>
