<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/productNameTitle"
        style="@style/EditActivityTitle"
        android:text="@string/product_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/productNameInput"
        style="@style/EditActivityInput"
        android:hint="@string/product_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameTitle"
        android:autofillHints="" />

    <TextView
        android:id="@+id/productShopTitle"
        style="@style/EditActivityTitle"
        android:text="@string/product_shop_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameInput" />

    <EditText
        android:id="@+id/productShopInput"
        style="@style/EditActivityInput"
        android:hint="@string/product_shop_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productShopTitle"
        android:autofillHints="" />

    <TextView
        android:id="@+id/productPriceTitle"
        style="@style/EditActivityTitle"
        android:text="@string/product_price_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productShopInput" />

    <EditText
        android:id="@+id/productPriceEditable"
        style="@style/EditActivityInputPrice"
        android:hint="@string/product_price_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPriceTitle"
        android:autofillHints="" />

    <Button
        android:id="@+id/saveButton"
        style="@style/EditActivityContent"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productPriceEditable" />
</androidx.constraintlayout.widget.ConstraintLayout>